<?xml version="1.0"?>
<package>
  <name>pcl_segmentation</name>
  <version>0.0.1</version>
  <description>Subscribes to a point cloud and tries to find planes</description>
  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl</run_depend>

</package>
