<?xml version="1.0"?>
<package>
	<name>ros_benchmark</name>
	<version>1.0.0</version>
	<description>Benchmark the performance of different ROS packages</description>

	<maintainer email="kai@kaifranke.com">Kai Franke</maintainer>
	<license>BSD</license>

	<run_depend>feature_detection</run_depend>
	<run_depend>rosinit</run_depend>
	<run_depend>image_transmission</run_depend>
	<run_depend>pcl_segmentation</run_depend>

	<export>
	<metapackage/> 
	</export>

</package>
