<?xml version="1.0"?>
<package>
  <name>rosinit</name>
  <version>0.0.1</version>
  <description>Measures the time for node handle creation and parameter retreival</description>
  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>
